--- a/Mid Range/index.html
+++ b/Mid Range/index.html
@@ -102,5 +102,6 @@
 
         <!--Input and Submit Elements-->
         <form action="" method=""><label for="firstName">First Name:</label><input type="text" name="firstName" id="firstName"></form>
+        <!--Testing github-->
     </body>
 </html>
