added name passwd and email fields. submit button.

--- a/Mid Range/index.html
+++ b/Mid Range/index.html
@@ -100,8 +100,21 @@
 
         <br><br>
 
+        <h1>Input and Submit Elements</h1>
         <!--Input and Submit Elements-->
-        <form action="" method=""><label for="firstName">First Name:</label><input type="text" name="firstName" id="firstName"></form>
+        <form action="" method="">
+            <label for="firstNameField">First Name:</label>
+            <input type="text" name="firstNameField" id="firstName">
+            <br>
+            <label for="passwordField">Password:</label>
+            <input type="password" name="passwordField" placeholder="Please type in your password">
+            <br>
+            <label for="emailField">Email:</label>
+            <input type="email" name="emailField" placeholder="email@email">
+            <!-- value="" de olabilir ama orda kendin elle silmen gerek ve yerine yaziyor.-->
+            <br>
+            <input type="submit" value="Submit here">
+        </form>
         <!--Testing github-->
     </body>
 </html>
