--- a/Mid Range/index.html
+++ b/Mid Range/index.html
@@ -104,7 +104,7 @@
         <!--Input and Submit Elements-->
         <form action="" method="">
             <label for="firstNameField">First Name:</label>
-            <input type="text" name="firstNameField" id="firstName">
+            <input type="text" name="firstNameField" id="firstNameField">
             <br>
             <label for="passwordField">Password:</label>
             <input type="password" name="passwordField" placeholder="Please type in your password">
