added name passwd and email fields. submit button.

--- a/Mid Range/index.html
+++ b/Mid Range/index.html
@@ -107,10 +107,10 @@
             <input type="text" name="firstNameField" id="firstNameField">
             <br>
             <label for="passwordField">Password:</label>
-            <input type="password" name="passwordField" placeholder="Please type in your password">
+            <input type="password" name="passwordField" id="passwordField" placeholder="Please type in your password">
             <br>
             <label for="emailField">Email:</label>
-            <input type="email" name="emailField" placeholder="email@email">
+            <input type="email" name="emailField" id="emailField" placeholder="email@email">
             <!-- value="" de olabilir ama orda kendin elle silmen gerek ve yerine yaziyor.-->
             <br>
             <input type="submit" value="Submit here">
