linux mint github test

--- a/Mid Range/about.html
+++ b/Mid Range/about.html
@@ -10,6 +10,7 @@
         <!-- internal link -->
         <h2>An example of internal links and about page.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestias explicabo tempora perferendis sunt eos reprehenderit quae cupiditate alias vitae, assumenda eaque ea, qui facilis repellendus expedita minima. Corporis, doloribus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem porro nobis dignissimos perferendis voluptatem nemo cum nam incidunt iure, eum vel iste placeat asperiores. Laboriosam recusandae sed possimus praesentium ipsa, optio officiis explicabo. Architecto, maxime!</p>
         <a href="index.html">Click to go back to home.</a>
     </body>
 </html>
