finished 2nd playlist for the course

--- a/Mid Range/index.html
+++ b/Mid Range/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- The explanation if meta tags is in w3schools. -->
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -116,5 +117,53 @@
             <input type="submit" value="Submit here">
         </form>
         <!--Testing github-->
+
+        <br><br>
+
+        <h1>More elements!</h1>
+        <form action="">
+            <!--Text area-->
+            <p>Description</p>
+            <textarea name="" id="" cols="10" rows="2"></textarea> <br><br>
+
+            <!--Radio buttons-->
+            <p>Please select your favorite coding language?</p>
+            <input type="radio" name="codingLang" id="" value="javascript" checked>Javascript
+            <input type="radio" name="codingLang" id="" value="java">Java
+            <input type="radio" name="codingLang" id="" value="python">Python
+
+            <br><br>
+
+            <!--Checkboxes-->
+            <p>Please select your favorite coding language?</p>
+            <input type="checkbox" name="codingCLang" id="" value="javascript" checked>Javascript
+            <input type="checkbox" name="codingCLang" id="" value="java" >Java
+            <input type="checkbox" name="codingCLang" id="" value="python" >Python
+
+            <br><br>
+
+            <!--Select input-->
+            <p>Please select your favorite coding language?</p>
+            <select name="codingSLang" id="">
+                <option value="none">-</option>
+                <option value="javascript">Javascript</option>
+                <option value="java">Java</option>
+                <option value="python">Python</option>
+            </select>
+            <br><br><button type="submit">Submit here!</button>
+        </form>
+
+        <!--Formatting code-->
+        <!--There is an extension called: prettier.
+        It automatically formats the code. Makes it prettier basically.-->
+
+        <!--
+            Keyboard shortcuts
+            CTRL + L === SELECT LINE
+            CTRL + K + U === COMMENT LINE
+        -->
+        
+
+
     </body>
 </html>
