--- a/Mid Range/index.html
+++ b/Mid Range/index.html
@@ -162,6 +162,8 @@
             CTRL + L === SELECT LINE
             CTRL + K + U === COMMENT LINE
         -->
+		
+		<!-- Testing out the app. -->
         
 
 
